--- a/index.html
+++ b/index.html
@@ -168,24 +168,69 @@
       <h2 class="propiedades-destacadas-title">Propiedades Destacadas</h2>
       <section class="propiedades-destacadas">
         <!-- Destacada 1 -->
-        <div class="card casa-uno">
+        <a href="#" class="card casa-uno">
           <div class="img-container">
-            <img
-              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Las_Condes_-_Venta_fntgp5.png"
-              class="card-img-top"
-              alt="Lobby moderno piso negro"
-            />
-            <p>UF 5.858,78</p>
+            <div
+              id="carouselExampleControls1"
+              class="carousel slide"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <p>UF 9.900</p>
+                <div class="carousel-item active">
+                  <img
+                    src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663551055/Las%20Mar%C3%ADas/arriendo%201/21631_sbNum6xDnlAAygguvSo420220804233933_cr4luo.png"
+                    class="d-block w-100"
+                    alt="living frontal departamento"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663551056/Las%20Mar%C3%ADas/arriendo%201/21631_oxfiVCojagVMHswucqpC20220804234016_granq7.png"
+                    class="d-block w-100"
+                    alt="living lateral departamento"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663551057/Las%20Mar%C3%ADas/arriendo%201/21631_aZCWktdTQ6jeDtYb2L3k20220804233937_nxaax1.png"
+                    class="d-block w-100"
+                    alt="living barra departamento"
+                  />
+                </div>
+              </div>
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#carouselExampleControls1"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#carouselExampleControls1"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+            <p>UF 9.900</p>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Departamento en Las Condes</h5>
-            <a class="card-text">
-              Excelente departamento en Venta en Las Condes. Living comedor con
-              salida a terraza con excelente vista...
-            </a>
+            <h5 class="card-title">DEPARTAMENTO EN VIÑA DEL MAR</h5>
           </div>
           <div class="card-icon">
-            <div class="card-body card-utilities">
+            <div class="card-body card-utilities bedroom">
               <p>2</p>
               <img
                 src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662500723/Las%20Mar%C3%ADas/bed_txizgk.png"
@@ -193,7 +238,7 @@
                 class="icon"
               />
             </div>
-            <div class="card-body card-utilities">
+            <div class="card-body card-utilities bathroom">
               <p>2</p>
               <img
                 src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662506787/Las%20Mar%C3%ADas/bath_ezx5nd.png"
@@ -201,27 +246,88 @@
                 class="icon"
               />
             </div>
+            <div class="card-body card-utilities m2">
+              <p>95</p>
+              <img
+                src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663599711/Las%20Mar%C3%ADas/blueprint_l3r7g4.png"
+                alt="m2 icon"
+                class="icon"
+              />
+            </div>
+            <div class="card-body card-utilities garage">
+              <p>1</p>
+              <img
+                src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663599804/Las%20Mar%C3%ADas/garaje_hp2lgk.png"
+                alt="garage icon"
+                class="icon"
+              />
+            </div>
           </div>
-        </div>
+        </a>
         <!-- Destacada 2 -->
-        <div class="card casa-dos">
+        <a href="#" class="card casa-dos">
           <div class="img-container">
-            <img
-              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Las_Condes_-_Venta_fntgp5.png"
-              class="card-img-top"
-              alt="Lobby moderno piso negro"
-            />
+            <div
+              id="carouselExampleControls2"
+              class="carousel slide"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <p>UF 5.858,78</p>
+                <div class="carousel-item active">
+                  <img
+                    src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663552292/Las%20Mar%C3%ADas/venta%201%C2%BA/19819_fP5Wlnkiyy8pf7h9qux020220608233130_cmovy3.png"
+                    class="d-block w-100"
+                    alt="habitación frontal departamento"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663552293/Las%20Mar%C3%ADas/venta%201%C2%BA/19819_UphFu0WTcJfZqyHtFuYx20220608233135_cjwhme.png"
+                    class="d-block w-100"
+                    alt="habitación lateral departamento"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663552294/Las%20Mar%C3%ADas/venta%201%C2%BA/19819_zhOwDq5uKqExC7tvpuRR20220608233156_ah3xj5.png"
+                    class="d-block w-100"
+                    alt="cocina departamento"
+                  />
+                </div>
+              </div>
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#carouselExampleControls2"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#carouselExampleControls2"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
             <p>UF 5.858,78</p>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Departamento en Las Condes</h5>
-            <a class="card-text">
-              Excelente departamento en Venta en Las Condes. Living comedor con
-              salida a terraza con excelente vista...
-            </a>
+            <h5 class="card-title">DEPARTAMENTO EN LAS CONDES</h5>
           </div>
           <div class="card-icon">
-            <div class="card-body card-utilities">
+            <div class="card-body card-utilities bedroom">
               <p>2</p>
               <img
                 src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662500723/Las%20Mar%C3%ADas/bed_txizgk.png"
@@ -229,7 +335,7 @@
                 class="icon"
               />
             </div>
-            <div class="card-body card-utilities">
+            <div class="card-body card-utilities bathroom">
               <p>2</p>
               <img
                 src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662506787/Las%20Mar%C3%ADas/bath_ezx5nd.png"
@@ -237,80 +343,216 @@
                 class="icon"
               />
             </div>
+            <div class="card-body card-utilities m2">
+              <p>58</p>
+              <img
+                src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663599711/Las%20Mar%C3%ADas/blueprint_l3r7g4.png"
+                alt="m2 icon"
+                class="icon"
+              />
+            </div>
+            <div class="card-body card-utilities garage">
+              <p>1</p>
+              <img
+                src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663599804/Las%20Mar%C3%ADas/garaje_hp2lgk.png"
+                alt="garage icon"
+                class="icon"
+              />
+            </div>
           </div>
-        </div>
+        </a>
         <!-- Destacada 3 -->
-        <div class="card casa-tres">
+        <a href="#" class="card casa-tres">
           <div class="img-container">
-            <img
-              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Las_Condes_-_Venta_fntgp5.png"
-              class="card-img-top"
-              alt="Lobby moderno piso negro"
-            />
-            <p>UF 5.858,78</p>
+            <div
+              id="carouselExampleControls3"
+              class="carousel slide"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663553044/Las%20Mar%C3%ADas/venta%203/19156_UH9rnE8mfPfja87WE3Pd20220519150445_sxegkw.png"
+                    class="d-block w-100"
+                    alt="living frontal departamento"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663553045/Las%20Mar%C3%ADas/venta%203/19156_dcXsxmxf6otuWeyUznvi20220513225308_ei9pxb.png"
+                    class="d-block w-100"
+                    alt="piscina"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663553046/Las%20Mar%C3%ADas/venta%203/19156_XOzfpz4oehK6fNc6WfPw20220519150708_bdyjav.png"
+                    class="d-block w-100"
+                    alt="balcon departamento"
+                  />
+                </div>
+              </div>
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#carouselExampleControls3"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#carouselExampleControls3"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+            <p>$2.000.000 CL</p>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Departamento en Las Condes</h5>
-            <a class="card-text">
-              Excelente departamento en Venta en Las Condes. Living comedor con
-              salida a terraza con excelente vista...
-            </a>
+            <h5 class="card-title">DEPARTAMENTO EN LAS CONDES</h5>
           </div>
           <div class="card-icon">
-            <div class="card-body card-utilities">
-              <p>2</p>
+            <div class="card-body card-utilities bedroom">
+              <p>5</p>
               <img
                 src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662500723/Las%20Mar%C3%ADas/bed_txizgk.png"
                 alt="bedroom icon"
                 class="icon"
               />
             </div>
-            <div class="card-body card-utilities">
-              <p>2</p>
+            <div class="card-body card-utilities bathroom">
+              <p>4</p>
               <img
                 src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662506787/Las%20Mar%C3%ADas/bath_ezx5nd.png"
                 alt="bathroom icon"
                 class="icon"
               />
             </div>
+            <div class="card-body card-utilities m2">
+              <p>149</p>
+              <img
+                src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663599711/Las%20Mar%C3%ADas/blueprint_l3r7g4.png"
+                alt="m2 icon"
+                class="icon"
+              />
+            </div>
+            <div class="card-body card-utilities garage">
+              <p>1</p>
+              <img
+                src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663599804/Las%20Mar%C3%ADas/garaje_hp2lgk.png"
+                alt="garage icon"
+                class="icon"
+              />
+            </div>
           </div>
-        </div>
+        </a>
         <!-- Destacada 4 -->
-        <div class="card casa-cuatro">
+        <a href="#" class="card casa-cuatro">
           <div class="img-container">
-            <img
-              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Las_Condes_-_Venta_fntgp5.png"
-              class="card-img-top"
-              alt="Lobby moderno piso negro"
-            />
-            <p>UF 5.858,78</p>
+            <div
+              id="carouselExampleControls4"
+              class="carousel slide"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663604840/Las%20Mar%C3%ADas/venta%202/14123_5DygpB9VjrsQEroogGOo20210702204537_uszbkj.png"
+                    class="d-block w-100"
+                    alt="living frontal departamento"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663604843/Las%20Mar%C3%ADas/venta%202/14123_k37lozpHcibyFzJKn8gN20210702205026_gbqjcg.png"
+                    class="d-block w-100"
+                    alt="balcon departamento"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663604845/Las%20Mar%C3%ADas/venta%202/14123_9jtpvqy6Yq4gca9E4vtF20210702210100_wl5acu.png"
+                    class="d-block w-100"
+                    alt="cocina departamento"
+                  />
+                </div>
+              </div>
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#carouselExampleControls4"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#carouselExampleControls4"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+            <p>UF 11.900</p>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Departamento en Las Condes</h5>
-            <a class="card-text">
-              Excelente departamento en Venta en Las Condes. Living comedor con
-              salida a terraza con excelente vista...
-            </a>
+            <h5 class="card-title">DEPARTAMENTO EN LAS CONDES</h5>
           </div>
           <div class="card-icon">
-            <div class="card-body card-utilities">
-              <p>2</p>
+            <div class="card-body card-utilities bedroom">
+              <p>4</p>
               <img
                 src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662500723/Las%20Mar%C3%ADas/bed_txizgk.png"
                 alt="bedroom icon"
                 class="icon"
               />
             </div>
-            <div class="card-body card-utilities">
-              <p>2</p>
+            <div class="card-body card-utilities bathroom">
+              <p>4</p>
               <img
                 src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662506787/Las%20Mar%C3%ADas/bath_ezx5nd.png"
                 alt="bathroom icon"
                 class="icon"
               />
             </div>
+            <div class="card-body card-utilities m2">
+              <p>150</p>
+              <img
+                src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663599711/Las%20Mar%C3%ADas/blueprint_l3r7g4.png"
+                alt="m2 icon"
+                class="icon"
+              />
+            </div>
+            <div class="card-body card-utilities garage">
+              <p>2</p>
+              <img
+                src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663599804/Las%20Mar%C3%ADas/garaje_hp2lgk.png"
+                alt="garage icon"
+                class="icon"
+              />
+            </div>
           </div>
-        </div>
+        </a>
       </section>
     </main>
     <footer class="footer">
