--- a/pages/quienes.html
+++ b/pages/quienes.html
@@ -70,31 +70,22 @@
       <div class="quienes-container">
         <section class="quienes-somos-section">
           <p>
-            Las Marías se fundó durante 2018 en Santiago de Chile. Somos una empresa familiar y por eso entendemos que un hogar es fundamental para que puedas crear la tuya. <br>
-            Nuestro propósito es ayudarte a encontrar ese hogar con el que tanto deseas!
+            Las Marías se fundó durante 2018 en Santiago de Chile. <br> <br>
+            Somos una empresa familiar y por eso entendemos que un hogar es fundamental para que puedas crear la tuya. <br>
+            Nuestro propósito es ayudarte a encontrar ese hogar que tanto deseas!
             No solo somos una corredora de propiedades, somos cumplidores de sueños.
           </p>
           <img src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431856/Las%20Mar%C3%ADas/quienes-somos_zywbez.jpg" alt="Mansión blanca techo azul y jardín" />
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque
-            voluptatum accusamus eligendi! Quos, voluptatibus deserunt!
-            Voluptate, quo et, qui quia aperiam ipsum placeat unde, non illo
-            odio ratione ab incidunt ipsam maiores? Officia porro eveniet
-            assumenda reprehenderit, accusamus, accusantium dolor temporibus
-            perferendis blanditiis nostrum ipsa repellat omnis corrupti.
-            Laboriosam, quam suscipit consectetur delectus esse rerum veritatis
-            alias quidem! Culpa sapiente facilis eveniet quibusdam voluptatum
-            quod illo, corporis tenetur molestiae asperiores consequuntur
-            obcaecati accusantium dicta amet velit ipsa in dignissimos repellat,
-            autem at praesentium, cupiditate molestias? Ad, iste, quae magnam
-            tempore incidunt harum adipisci consequuntur dicta facere repellat
-            et enim molestias deleniti doloribus modi fugiat veniam fugit quos
-            commodi quidem! Voluptatem iste doloribus nobis fuga debitis quas,
-            consectetur doloremque sit in iure unde suscipit quo! Voluptatem
-            atque praesentium nihil repellat inventore alias facilis facere
-            dolores eveniet voluptas optio illo tenetur sit nesciunt ratione
-            dignissimos deserunt, nulla soluta molestias odit. Ratione, officia.
+            El inicio de un nuevo comienzo. <br><br>
+            Asesorar y acompañar a nuestros clientes a encontrar su siguiente hogar es nuestro desafío y motivación. <br>
+            Somos una corredora de propiedades con un atención personalizada, enfocada en la búsqueda de propiedades del sector de las Condes y Vitacura, pero también en la zona de Viña y otras ciudades de la Costa.
+            <br>
+            Nuestra experiencia, conocimientos del mercado local, la constante búsqueda en la oferta de propiedades, y contar con opciones de canje de otras corredoras importantes del sector, nos permite entregar opciones reales a nuestros clientes que cumplan sus requerimientos específicos de búsqueda. <br>
+            <br>
+            Transformando así, las decisiones complejas en gratas experiencias.
           </p>
+          <p class="firma"><strong> Marta López Astrada</strong></p>
         </section>
         <section class="form-container-todos">
           <h3>Búsqueda</h3>
