--- a/pages/venta.html
+++ b/pages/venta.html
@@ -86,30 +86,95 @@
           <div class="card">
             <div class="row g-0">
               <div class="col-md-4">
-                <img
-                  src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Las_Condes_3_Venta_mryhqc.png"
-                  class="img-fluid rounded-start"
-                  alt="casa-1"
-                />
+                <div
+                  id="carouselExampleControls1"
+                  class="carousel slide"
+                  data-bs-ride="carousel"
+                >
+                  <div class="carousel-inner">
+                    <p>UF 9.900</p>
+                    <div class="carousel-item active">
+                      <img
+                        src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663551055/Las%20Mar%C3%ADas/arriendo%201/21631_sbNum6xDnlAAygguvSo420220804233933_cr4luo.png"
+                        class="d-block w-100"
+                        alt="living frontal departamento"
+                      />
+                    </div>
+                    <div class="carousel-item">
+                      <img
+                        src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663551056/Las%20Mar%C3%ADas/arriendo%201/21631_oxfiVCojagVMHswucqpC20220804234016_granq7.png"
+                        class="d-block w-100"
+                        alt="living lateral departamento"
+                      />
+                    </div>
+                    <div class="carousel-item">
+                      <img
+                        src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663551057/Las%20Mar%C3%ADas/arriendo%201/21631_aZCWktdTQ6jeDtYb2L3k20220804233937_nxaax1.png"
+                        class="d-block w-100"
+                        alt="living barra departamento"
+                      />
+                    </div>
+                  </div>
+                  <button
+                    class="carousel-control-prev"
+                    type="button"
+                    data-bs-target="#carouselExampleControls1"
+                    data-bs-slide="prev"
+                  >
+                    <span
+                      class="carousel-control-prev-icon"
+                      aria-hidden="true"
+                    ></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button
+                    class="carousel-control-next"
+                    type="button"
+                    data-bs-target="#carouselExampleControls1"
+                    data-bs-slide="next"
+                  >
+                    <span
+                      class="carousel-control-next-icon"
+                      aria-hidden="true"
+                    ></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
               </div>
               <div class="col-md-6">
                 <div class="card-body">
-                  <h5 class="card-title">Departamento en Las Condes</h5>
-                  <p class="card-text">
-                    Living comedor con salida a terraza con excelente vista. 2
-                    dormitorios, el dormitorio principal en suite con salida a
-                    su terraza. El segundo dormitorio con muy linda vista
-                    también con un segundo baño. Cocina independiente con loggia
-                    y conexión a lavadora. 58 metros útiles. <br />
-                    58 metros útiles. El edificio cuenta con salón de usos
-                    múltiples, gimnasio grande y muy completo, lavandería,
-                    piscina, quincho en la terraza con vistas fantásticas. Está
-                    ubicado estratégicamente con todo lo necesario a la mano, a
-                    pasos del metro, Apumanque, Intramedica, supermercados,
-                    farmacias, colegios, excelente locomoción colectiva, etc.
-                    Tiene conserjería 24/7 1 estacionamiento subterráneo y 1
-                    bodega. Estacionamientos de visita.
-                  </p>
+                  <h5 class="card-title">DEPARTAMENTO EN VIÑA DEL MAR</h5>
+                  <ul class="card-text">
+                    <li>95 m² totales</li>
+                    <li>2 dormitorios</li>
+                    <li>2 baños</li>
+                    <li>1 estacionamiento</li>
+                    <li>1 bodega</li>
+                    <li>
+                      Pisos del living y comedor de madera, los dormitorios
+                      alfombrados, todas las terrazas cerradas.
+                    </li>
+                    <li>Ventanas termo panel en todo el departamento.</li>
+                    <li>
+                      Cocina con concepto abierto, muy cómoda e integrada con
+                      encimeras de granito.
+                    </li>
+                    <li>
+                      Moderno y luminoso con una maravillosa e inigualable vista
+                      al mar.
+                    </li>
+                    <li>Solo tres departamentos por piso.</li>
+                    <li>Grandes áreas verdes comunes.</li>
+                    <li>2 piscinas temperadas.</li>
+                    <li>Piscina exterior.</li>
+                    <li>Gimnasios</li>
+                    <li>Salas de usos múltiples.</li>
+                    <li>Cancha de Squash y seguridad 24 horas.</li>
+                    <li>
+                      Zona consolidada y de fácil acceso, con cercanía a
+                      colegios, comercio y servicios.
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
@@ -118,23 +183,95 @@
           <div class="card">
             <div class="row g-0">
               <div class="col-md-4">
-                <img
-                  src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Las_Condes_-_Venta_fntgp5.png"
-                  class="img-fluid rounded-start"
-                  alt="..."
-                />
+                <div
+                  id="carouselExampleControls2"
+                  class="carousel slide"
+                  data-bs-ride="carousel"
+                >
+                  <div class="carousel-inner">
+                    <p>UF 5.858,78</p>
+                    <div class="carousel-item active">
+                      <img
+                        src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663552292/Las%20Mar%C3%ADas/venta%201%C2%BA/19819_fP5Wlnkiyy8pf7h9qux020220608233130_cmovy3.png"
+                        class="d-block w-100"
+                        alt="habitación frontal departamento"
+                      />
+                    </div>
+                    <div class="carousel-item">
+                      <img
+                        src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663552293/Las%20Mar%C3%ADas/venta%201%C2%BA/19819_UphFu0WTcJfZqyHtFuYx20220608233135_cjwhme.png"
+                        class="d-block w-100"
+                        alt="habitación lateral departamento"
+                      />
+                    </div>
+                    <div class="carousel-item">
+                      <img
+                        src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663552294/Las%20Mar%C3%ADas/venta%201%C2%BA/19819_zhOwDq5uKqExC7tvpuRR20220608233156_ah3xj5.png"
+                        class="d-block w-100"
+                        alt="cocina departamento"
+                      />
+                    </div>
+                  </div>
+                  <button
+                    class="carousel-control-prev"
+                    type="button"
+                    data-bs-target="#carouselExampleControls2"
+                    data-bs-slide="prev"
+                  >
+                    <span
+                      class="carousel-control-prev-icon"
+                      aria-hidden="true"
+                    ></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button
+                    class="carousel-control-next"
+                    type="button"
+                    data-bs-target="#carouselExampleControls2"
+                    data-bs-slide="next"
+                  >
+                    <span
+                      class="carousel-control-next-icon"
+                      aria-hidden="true"
+                    ></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
               </div>
               <div class="col-md-6">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                  <p class="card-text">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                  </p>
+                  <h5 class="card-title">DEPARTAMENTO EN LAS CONDES</h5>
+                  <ul class="card-text">
+                    <li>
+                      Living comedor con salida a terraza con excelente vista
+                    </li>
+                    <li>
+                      2 dormitorios, el dormitorio principal en suite con salida
+                      a su terraza.
+                    </li>
+                    <li>
+                      El segundo dormitorio con muy linda vista también con un
+                      segundo baño.
+                    </li>
+                    <li>
+                      Cocina independiente con loggia y conexión a lavadora.
+                    </li>
+                    <li>58 metros útiles.</li>
+                    <li>
+                      El edificio cuenta con salón de usos múltiples, gimnasio
+                      grande y muy completo, lavandería, piscina, quincho en la
+                      terraza con vistas fantásticas.
+                    </li>
+                    <li>
+                      Está ubicado estratégicamente con todo lo necesario a la
+                      mano, a pasos del metro, Apumanque, Intramedica,
+                      supermercados, farmacias, colegios, excelente locomoción
+                      colectiva, etc.
+                    </li>
+                    <li>Tiene conserjería 24/7</li>
+                    <li>1 estacionamiento subterráneo y 1 bodega.</li>
+                    <li>Estacionamientos de visita.</li>
+                  </ul>
                 </div>
               </div>
             </div>
@@ -143,23 +280,91 @@
           <div class="card">
             <div class="row g-0">
               <div class="col-md-4">
-                <img
-                  src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431950/Las%20Mar%C3%ADas/Departamento_en_Vin%CC%83a_-_Vende_h4pj7f.png"
-                  class="img-fluid rounded-start"
-                  alt="casa-1"
-                />
+                <div
+                  id="carouselExampleControls3"
+                  class="carousel slide"
+                  data-bs-ride="carousel"
+                >
+                  <div class="carousel-inner">
+                    <p>UF 11.800</p>
+                    <div class="carousel-item active">
+                      <img
+                        src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663604840/Las%20Mar%C3%ADas/venta%202/14123_5DygpB9VjrsQEroogGOo20210702204537_uszbkj.png"
+                        class="d-block w-100"
+                        alt="living frontal departamento"
+                      />
+                    </div>
+                    <div class="carousel-item">
+                      <img
+                        src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663604843/Las%20Mar%C3%ADas/venta%202/14123_k37lozpHcibyFzJKn8gN20210702205026_gbqjcg.png"
+                        class="d-block w-100"
+                        alt="balcon departamento"
+                      />
+                    </div>
+                    <div class="carousel-item">
+                      <img
+                        src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663604845/Las%20Mar%C3%ADas/venta%202/14123_9jtpvqy6Yq4gca9E4vtF20210702210100_wl5acu.png"
+                        class="d-block w-100"
+                        alt="cocina departamento"
+                      />
+                    </div>
+                  </div>
+                  <button
+                    class="carousel-control-prev"
+                    type="button"
+                    data-bs-target="#carouselExampleControls3"
+                    data-bs-slide="prev"
+                  >
+                    <span
+                      class="carousel-control-prev-icon"
+                      aria-hidden="true"
+                    ></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button
+                    class="carousel-control-next"
+                    type="button"
+                    data-bs-target="#carouselExampleControls3"
+                    data-bs-slide="next"
+                  >
+                    <span
+                      class="carousel-control-next-icon"
+                      aria-hidden="true"
+                    ></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
               </div>
               <div class="col-md-6">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                  <p class="card-text">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                  </p>
+                  <h5 class="card-title">DEPARTAMENTO EN LAS CONDES</h5>
+                  <ul class="card-text">
+                    <li>150 metros cuadrados.</li>
+                    <li>
+                      Muy luminoso, amplios espacios con excelente orientación.
+                    </li>
+                    <li>
+                      Living comedor con salida a terraza corrida cerrada de 21
+                      m2.
+                    </li>
+                    <li>3 dormitorios muy grandes con amplios armarios.</li>
+                    <li>
+                      3 baños. 1 suite, los dos baños principales tienen grandes
+                      ventanas al exterior.
+                    </li>
+                    <li>
+                      Dormitorio de servicio con su baño muy independientes.
+                    </li>
+                    <li>2 estacionamientos paralelos.</li>
+                    <li>1 bodega.</li>
+                    <li>
+                      Muy bien conectado en estratégico lugar de Las Condes,
+                      cerca de todo, supermercados, colegios, farmacias, cafes,
+                      restaurantes, kioscos a pasos del metro Escuela Militar.
+                      Excelente locomoción. Cerca del Parque araucano, malls
+                      etc.
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
