--- a/pages/arriendo.html
+++ b/pages/arriendo.html
@@ -86,29 +86,97 @@
           <div class="card">
             <div class="row g-0">
               <div class="col-md-4">
-                <img
-                  src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Las_Condes_3_Venta_mryhqc.png"
-                  class="img-fluid rounded-start"
-                  alt="casa-1"
-                />
+                <div
+                  id="carouselExampleControls1"
+                  class="carousel slide"
+                  data-bs-ride="carousel"
+                >
+                  <div class="carousel-inner">
+                    <p>$2.000.000 CL</p>
+                    <div class="carousel-item active">
+                      <img
+                        src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663553044/Las%20Mar%C3%ADas/venta%203/19156_UH9rnE8mfPfja87WE3Pd20220519150445_sxegkw.png"
+                        class="d-block w-100"
+                        alt="living frontal departamento"
+                      />
+                    </div>
+                    <div class="carousel-item">
+                      <img
+                        src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663553045/Las%20Mar%C3%ADas/venta%203/19156_dcXsxmxf6otuWeyUznvi20220513225308_ei9pxb.png"
+                        class="d-block w-100"
+                        alt="piscina"
+                      />
+                    </div>
+                    <div class="carousel-item">
+                      <img
+                        src="https://res.cloudinary.com/maxjhernandez/image/upload/v1663553046/Las%20Mar%C3%ADas/venta%203/19156_XOzfpz4oehK6fNc6WfPw20220519150708_bdyjav.png"
+                        class="d-block w-100"
+                        alt="balcon departamento"
+                      />
+                    </div>
+                  </div>
+                  <button
+                    class="carousel-control-prev"
+                    type="button"
+                    data-bs-target="#carouselExampleControls1"
+                    data-bs-slide="prev"
+                  >
+                    <span
+                      class="carousel-control-prev-icon"
+                      aria-hidden="true"
+                    ></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button
+                    class="carousel-control-next"
+                    type="button"
+                    data-bs-target="#carouselExampleControls1"
+                    data-bs-slide="next"
+                  >
+                    <span
+                      class="carousel-control-next-icon"
+                      aria-hidden="true"
+                    ></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
               </div>
               <div class="col-md-6">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                  <p class="card-text">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                  </p>
+                  <h5 class="card-title">DEPARTAMENTO EN LAS CONDES</h5>
+                  <ul class="card-text">
+                    <li>Departamento con orientación Sur-Oriente.</li>
+                    <li>Hall de entrada con piso de mármol.</li>
+                    <li>Puerta de vidrio, tipo puertas francesas, que separa entre hall de entrada y living.</li>
+                    <li>Living con salida a terraza.</li>
+                    <li>Amplio comedor con conexión a cocina.</li>
+                    <li>
+                      Cocina con horno eléctrico, encimera a gas y despensa, lavavajillas y refrigerador.
+                    </li>
+                    <li>Con toda la vajilla y utencillos completos.</li>
+                    <li>
+                      Comedor de diario con bancos.
+                    </li>
+                    <li>
+                      Lavadero con lavarropa y secadora.
+                    </li>
+                    <li>Sector de planchado.</li>
+                    <li>Dormitorio de servicio en suite.</li>
+                    <li>Otro Hall de distribución con piso de mármol hacia dormitorios.</li>
+                    <li>1 Dormitorio principal en suite muy grande con su baño con dos lavabos y walking closet.</li>
+                    <li>3 Dormitorios de tamaño similar completos con sus camas y ropa de cama.</li>
+                    <li>Edificio cuenta con piscina, jardines, estacionamientos de visitas y juegos infantiles.</li>
+                    <li>Calefacción por losa radiante.</li>
+                    <li>
+                      Zona con mucha variedad de restaurantes, oficinas, plazas y a pasos del metro Escuela Militar, minimarkets, notarías y todos los negocios que puedan necesitar.
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
           </div>
           <!-- Casa 2 -->
-          <div class="card">
+          <!-- <div class="card">
             <div class="row g-0">
               <div class="col-md-4">
                 <img
@@ -131,9 +199,9 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- Casa 3 -->
-          <div class="card">
+          <!-- <div class="card">
             <div class="row g-0">
               <div class="col-md-4">
                 <img
@@ -156,7 +224,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </section>
         <section class="form-container-todos">
           <h3>Búsqueda</h3>
@@ -208,7 +276,6 @@
               </button>
             </div>
         </section>
-
     </main>
     <footer class="footer">
       <div class="contacto">
